# Mega-hack

./: CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  index.html  mod.json
src/: App.css  App.tsx  CheatManager.cpp  CheatManager.hpp  G  index.css  main.cpp
src/cheats/: AdvancedCheats.cpp  AdvancedCheats.hpp  AudioCheats.cpp  AudioCheats.hpp  DebugCheats.cpp  DebugCheats.hpp  EditorCheats.cpp  EditorCheats.hpp  LevelCheats.cpp  LevelCheats.hpp  MenuCheats.cpp  MenuCheats.hpp  ObjectCheats.cpp  ObjectCheats.hpp  PlayerCheats.cpp  PlayerCheats.hpp  ShopCheats.cpp  ShopCheats.hpp  VisualCheats.cpp  VisualCheats.hpp
src/ui/: CheatMenu.cpp  CheatMenu.hpp
src/utils/: Gg  Utils.cpp  Utils.hpp
